# Django_Projects

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
project1/: .dockerignore  Dockerfile  README.md  requirements.txt
project1/core/: settings.py  urls.py
project1/myapp/: views.py
project2/: Dockerfile  README.md  manage.py
project2/basicapp/: forms.py  urls.py  views.py
project2/blog/: settings.py  urls.py
project2/blogapp/: tests.py  urls.py  views.py
project2/form/: asgi.py  settings.py  urls.py  wsgi.py
project3/: .dockerignore  Dockerfile  README.md  manage.py  populate_firstapp.py  populate_twoapp.py
project3/Project3/: asgi.py  settings.py  urls.py  wsgi.py
project3/firstapp/: admin.py  apps.py  models.py  urls.py  views.py
project3/templates/: home.html
project3/twoapp/: admin.py  apps.py  form.py  models.py  urls.py  views.py
project4/: Dockerfile  README.md  manage.py
project4/Project4/: asgi.py  settings.py  urls.py  wsgi.py
project4/login/: admin.py  forms.py  models.py  urls.py  views.py
project4/templates/: home.html
project5/: .dockerignore  Dockerfile  README.md  manage.py
project5/home/: models.py  urls.py  views.py
project5/mysite/: asgi.py  settings.py  urls.py  wsgi.py
project5/templates/: about.html  base.html  contact.html  home.html  projects.html
project6/: .dockerignore  ASSIGNMENT.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
project6/blog/: settings.py  urls.py
project6/blogapp/: admin.py  models.py  serializers.py  tests.py  urls.py  (+1 more)
(+27 files in other folders)
