[project]
name = "django-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "django>=5.2.2",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
